# prod-2025-solo

./: .gitlab-ci.yml
solution/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev-compose.yml  docker-compose.yml  shell.nix
solution/assets/: grafana-dashboard.json  openapi.json
solution/crates/backend/: Cargo.toml  build.rs
solution/crates/backend/db/events/: advertiser_created.surql  campaign_created.surql  campaign_deleted.surql  clicked.surql  day_changed.surql  impressed.surql  scored.surql
solution/crates/backend/db/migrations/: 20250212_161849_Init.surql
solution/crates/backend/db/migrations/definitions/: 20250212_161849_Init.json  _initial.json
solution/crates/backend/db/schemas/: advertiser.surql  campaign.surql  client.surql  interacted_with.surql  scored.surql  stats_advertiser.surql  stats_campaign.surql  system.surql
solution/crates/backend/src/: lib.rs  main.rs
solution/crates/backend/src/models/: gender.rs  mod.rs
solution/crates/backend/src/models/db/: advertiser.rs  campaign.rs  client.rs  interaction.rs  ml_score.rs  mod.rs  time.rs
solution/crates/backend/src/models/db/stats/: advertiser.rs  campaign.rs  mod.rs
solution/crates/backend/src/models/dto/: ad.rs  advertiser.rs  campaign.rs  client.rs  ml_score.rs  mod.rs  stats.rs  time.rs
solution/crates/backend/src/models/url/: ad.rs  advertiser.rs  campaign.rs  client.rs  mod.rs  pagination.rs
solution/crates/backend/src/routes/: ml_scores.rs  mod.rs  not_found.rs
solution/crates/backend/src/routes/ads/: mod.rs
solution/crates/backend/src/routes/ads/by_id/: click.rs  mod.rs
solution/crates/backend/src/routes/advertisers/: bulk.rs  by_id.rs  mod.rs
solution/crates/backend/src/routes/advertisers/campaigns/: mod.rs
solution/crates/backend/src/routes/advertisers/campaigns/by_id/: image.rs  mod.rs
solution/crates/backend/src/routes/clients/: bulk.rs  by_id.rs  mod.rs
solution/crates/backend/src/routes/statistics/: mod.rs
solution/crates/backend/src/routes/statistics/advertisers/: mod.rs
solution/crates/backend/src/routes/statistics/advertisers/by_id/: daily.rs  mod.rs
solution/crates/backend/src/routes/statistics/campaigns/: mod.rs
solution/crates/backend/src/routes/time/: advance.rs  mod.rs
solution/crates/backend/src/utils/: logger.rs  minio.rs  mod.rs  openapi.rs  validation.rs
solution/crates/backend/tests/: ads.rs  advertisers.rs  campaigns.rs  clients.rs  statistics.rs  time.rs
solution/crates/backend/tests/common/: api.rs  asserts.rs  database.rs  environment.rs  file_host.rs  mod.rs
solution/crates/backend/tests/common/models/: builders.rs  mod.rs
solution/crates/bot/: Cargo.toml  build.rs
solution/crates/bot/db/migrations/definitions/: _initial.json
solution/crates/bot/src/: lib.rs  main.rs
solution/crates/bot/src/command/: mod.rs  start.rs
solution/crates/bot/src/state/: login.rs  mod.rs  register.rs
solution/crates/bot/src/state/panel/: mod.rs
solution/crates/profanity-checker/: Cargo.toml  README.md  build.rs
solution/crates/profanity-checker/dictionaries/github/: README.md
solution/crates/profanity-checker/dictionaries/steam/: README.md
solution/crates/profanity-checker/src/: context.rs  dictionary.rs  lib.rs  normalization.rs
solution/crates/profanity-checker/tests/: basic.rs  context.rs
solution/crates/surrealdb-helper/: Cargo.toml
solution/crates/surrealdb-helper/src/: lib.rs
(+2 files in other folders)
