[workspace]
resolver = "2"
members = [ 
    "crates/env-config",
    "crates/profanity-checker", 
    "crates/surrealdb-helper", 
    "crates/backend",
    "crates/bot", 
]


[workspace.dependencies]
env-config = { path = "crates/env-config" }
profanity-checker = { path = "crates/profanity-checker" }
surrealdb-helper = { path = "crates/surrealdb-helper" }

include_dir = "0.7"

log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.13", features = ["v7", "macro-diagnostics", "serde"] }

surrealdb = "2.2"

reqwest = { version = "0.12", features = ["json"] }


rstest = "0.24"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.test.package.profanity-checker]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
codegen-units = 1

